# qortex

./: .dockerignore  .gitignore  CH5.txt  CH5_from_pdf.txt  README.md  SLUOP.md  ch05_manifest.json  mkdocs.yml  pyproject.toml  qortex-registry.toml
.github/workflows/: ci.yml  docs.yml  publish-dev.yml  publish-ingest.yml  publish-learning.yml  publish-observe.yml  publish-online.yml  publish.yml
benchmarks/autogen_tcm/: __init__.py  eval_retrieval.py
benchmarks/comparative/: run.py
benchmarks/longmemeval/: __init__.py  evaluate.py  ingest.py  learning_loop.py  retrieve.py  runner.py
buildlog/: 2026-02-06-extraction-density-improvements.md  2026-02-07-issue-29-illustrative-concepts.md  2026-02-07-mnemosyne-phase1-causal.md  2026-02-09-observability-wiring.md  2026-02-09-otel-collector-push-metrics.md  2026-02-12-numpy-cosine-222x-the-algorithm-wins.md  2026-02-22-network-service-layer-phase1.md  2026-03-06-gauntlet-credits-kg-interop.md  2026.02.13.md
buildlog/.buildlog/: gauntlet_cleared
contrib/integration-audit/: competitive-positioning.md  integration-audit-summary.md  pitch-deck-integration.md  reproduction-guide.md  stat-sheet.md
demo_output/: cypher_queries.json  demo_results.json  qortex_derived_seed.yaml
docker/: Dockerfile  docker-compose.yml
docker/grafana/dashboards/: qortex.json
docker/otel-collector/: otel-collector-config.yaml
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yaml
docs/: BMAD_INPUT.md  PHASE4-HIPPORAG-PLAN.md  changelog.md  eda-experiential-mistakes.md  index.md  requirements.txt
docs/architecture/: overview.md  projection-pipeline.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: buildlog-interop.md  consumer-integration.md  docker.md  enrichment.md  learning.md  memgraph.md  observability.md  online-indexing.md  postgres-setup.md  projecting-rules.md  querying.md  rest-api.md  vec-migration.md  visualization.md
docs/plans/: green-observability-integration.md
docs/reference/: api.md  cli.md  environment-variables.md  interop-schema.md  models.md
docs/tutorials/: PART3-GRAPH-EXPLORATION-OUTLINE.md  REDESIGN-PLAN.md  SKILL-CHAPTER-GENERATOR.md  SKILL-CURRICULUM-PLANNER.md  full-loop-backward.md  full-loop-demo.md  full-loop-forward.md  full-loop-overview.md  full-loop.md  index.md  part1-multi-hop-problem.md  part2-knowledge-graphs.md  part3-projection-pipeline.md  part4-consumer-loop.md  part5-pattern-completion.md  part6-hipporag.md  series-outline.md  the-road-ahead.md  why-knowledge-graphs.md
docs/tutorials/case-studies/: agno-knowledge-protocol.md  crewai-knowledge-storage.md  index.md  langchain-base-retriever.md  langchain-vectorstore.md  mastra-mcp-vector-store.md
docs/tutorials/causal-dag/: CURRICULUM-OUTLINE.yaml  index.md  part1-edge-directions.md  part2-building-the-dag.md  part3-d-separation.md  part4-credit-assignment.md  part5-degradation-chain.md
docs/tutorials/fisher-information/: CURRICULUM-OUTLINE.yaml  index.md  part1-fisher-metric.md  part2-trajectories.md  part3-geodesics.md  part4-curvature.md  part5-dynamical-systems.md  part6-interoception.md
docs/tutorials/graph-analytics/: BUG-PLAN-relations-extraction.md  PLAN.md  index.md  part1-welcome.md  part2-cypher.md  part3-multi-hop.md  part4-centrality.md  part5-communities.md  part6-forging-rules.md
docs/tutorials/graph-exploration/: 3.1-what-do-i-have.md  3.2-counting-and-grouping.md  3.3-following-the-connections.md  3.4-filtering-by-pattern.md  3.5-finding-the-hubs.md  3.6-paths-and-distances.md  index.md
notebooks/: mistake_time_series.ipynb
scripts/: batch-ingest-chapters.sh  demo_credit_propagation_live.py  demo_learning_live.py  demo_round_trip.py  publish-dev.py  registry.py  render-mermaid.py  validate_live_stack.py
src/qortex/: __init__.py  client.py  derive.py  flags.py  http_client.py  ingest_emissions.py  interop.py  interop_schemas.py  service.py
src/qortex/adapters/: __init__.py  agno.py  autogen.py  autogen_tcm.py  crewai.py  langchain.py  langchain_vectorstore.py  mastra.py
src/qortex/api/: __init__.py  app.py  middleware.py  routes.py
src/qortex/causal/: __init__.py  backend.py  credit.py  dag.py  dispatch.py  dsep.py  projector.py  refutation.py  types.py
src/qortex/checkpoints/: __init__.py  manager.py
src/qortex/cli/: __init__.py  _config.py  _errors.py  infra.py  ingest.py  inspect_cmd.py  interop_cmd.py  migrate.py  project.py  prune.py  viz.py
src/qortex/core/: __init__.py  backend.py  memgraph.py  memory.py  models.py  pool.py  pruning.py  rules.py  templates.py
src/qortex/enrichment/: __init__.py  anthropic.py  base.py  pipeline.py
src/qortex/hippocampus/: __init__.py  adapter.py  buffer.py  factors.py  interoception.py  pg_store.py  retrieval.py  (+1 more)
src/qortex_ingest/: __init__.py  base.py  markdown.py  pdf.py  text.py
tests/: __init__.py  bench_autogen_vs_vanilla.py  bench_perf.py  eval_agno_vs_qortex.py  openapi.yaml  test_api.py  test_auth.py  test_autogen_adapter.py  test_carbon.py  test_cli.py  test_cli_dogfood.py  test_client.py  test_config_snapshot.py  test_credit_propagation.py  test_dropin_dogfood.py  test_e2e_agno.py  test_e2e_book_to_buildlog.py  test_e2e_graph_pipeline.py  test_e2e_mastra.py  test_e2e_schemathesis.py  test_e2e_subprocess.py  test_enrichment.py  test_explore.py  test_explore_mcp.py  test_extractor.py  test_flags.py  test_framework_compat.py  test_graph_ingestor.py  test_hippocampus.py  test_http_client.py  test_ingest_concept_roles.py  test_ingest_embed.py  test_ingest_emissions.py  test_interop.py  test_langchain_e2e_dogfood.py  test_langchain_vectorstore.py  test_layer1_ingest.py  test_learner.py  test_learning_e2e_dogfood.py  test_learning_events.py  (+38 more)
tests/artifacts/: fidelity-report.json
tests/causal/: conftest.py  test_backend.py  test_credit.py  test_dag.py  test_dispatch.py  test_dsep.py  test_projector.py  test_refutation.py  test_types.py
tests/integration/: __init__.py  conftest.py  docker-compose.yml  test_interlinear.py  test_mindmirror_graph.py  test_mindmirror_source.py  test_unified_ingestor.py
(+96 files in other folders)
