[project]
name = "qortex"
version = "0.1.0"
description = "Knowledge graph ingestion engine with HippoRAG-style cross-domain retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Peleke Sengstacke" }
]
keywords = [
    "knowledge-graph",
    "rag",
    "hipporag",
    "llm",
    "retrieval",
    "mcp",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    # "gqlalchemy>=1.4",  # Memgraph driver - uncomment when implementing

    # LLM (optional, for extraction)
    # "anthropic>=0.18",
    # "openai>=1.0",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.23",
    "pdfplumber>=0.10",
]
mcp = [
    # MCP server dependencies
    # "mcp>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
]
all = [
    "qortex[pdf,mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/Peleke/qortex"
Repository = "https://github.com/Peleke/qortex"
Issues = "https://github.com/Peleke/qortex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qortex", "src/qortex_ingest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
