[project]
name = "qortex"
version = "0.4.0"
description = "Knowledge graph that learns from every interaction. MCP server, graph retrieval, adaptive learning."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Peleke Sengstacke" }
]
keywords = [
    "knowledge-graph",
    "rag",
    "hipporag",
    "llm",
    "retrieval",
    "mcp",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "fastmcp>=2.0",
    "numpy>=1.24",
    "pyventus>=0.7",
    "structlog>=24.0",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.23",
    "pdfplumber>=0.10",
]
vec = [
    "sentence-transformers>=2.2",
]
vec-sqlite = [
    "qortex[vec]",
    "sqlite-vec>=0.1",
]
source-postgres = [
    "asyncpg>=0.29",
]
mcp = [
    "fastmcp>=2.0",
]
causal = [
    "networkx>=3.0",
]
causal-dowhy = [
    "networkx>=3.0",
    "dowhy>=0.11",
]
causal-full = [
    "networkx>=3.0",
    "pyro-ppl>=1.8",
    "chirho>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "networkx>=3.0",
    "langchain-core>=0.2",
]
llm = [
    "anthropic>=0.18",
]
memgraph = [
    "neo4j>=5.0",
]
observability = [
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp>=1.22",
    "prometheus-client>=0.20",
]
all = [
    "qortex[pdf,vec-sqlite,mcp,llm,memgraph,causal,source-postgres,observability,dev]",
]

[project.scripts]
qortex = "qortex.cli:main"

[project.urls]
Homepage = "https://github.com/Peleke/qortex"
Repository = "https://github.com/Peleke/qortex"
Issues = "https://github.com/Peleke/qortex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qortex", "src/qortex_ingest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line length handled by formatter
    "B008",   # typer.Argument/Option in defaults is standard pattern
    "B904",   # typer.Exit doesn't need exception chaining
    "B905",   # zip strict not needed for Python 3.10+
    "SIM105", # contextlib.suppress is less readable for simple cases
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Temporarily disable error codes pending proper type fixes (Phase 2)
disable_error_code = [
    "var-annotated",   # Type annotation hints
    "assignment",      # Type mismatches in assignments
    "return-value",    # Return type mismatches
    "return",          # Missing return statement
    "arg-type",        # Argument type mismatches
    "union-attr",      # Anthropic SDK block type unions
    "misc",            # Protocol variance + exception variables
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Docker Compose services",
]
